bugs and alignments fixing

--- a/style.css
+++ b/style.css
@@ -1,71 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 .navbar img {
-    width: 220px;
+  width: 220px;
 }
 
 .btn-heart {
-    width: 50px;
-    height: 50px;
+  width: 50px;
+  height: 50px;
 }
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 h1 {
-    font-family: "Merriweather Sans", sans-serif;
-    font-size: 63px !important;
+  font-family: "Merriweather Sans", sans-serif;
+  font-size: 63px !important;
 }
 
 h2,
 span,
 p,
 h5 {
-    font-family: "Jost", sans-serif !important;
+  font-family: "Jost", sans-serif !important;
 }
 
 .card-fixing {
-    margin: -50px !important;
+  margin: -50px !important;
 }
 
 .cards-bg-fix {
-    min-height: 200px;
+  min-height: 200px;
 }
-
 .hero-section {
-    background-image: url('/imgs/bg-img-1.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+  background-image: url("/imgs/bg-img-1.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
 
 .hero-section-2 {
-    background-image: url('/imgs/home-2.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+  background-image: url("/imgs/home-2.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
 
 .hero-section-3 {
-    background-image: url('/imgs/home-3.jpg');
-    background-size: cover;
-    background-position: center;
-    height: 100vh ;
+  background-image: url("/imgs/home-3.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
 
 .cards-bg-img-1 {
-    background-image: url(/imgs/apple-img.png);
-    background-position: center;
+  background-image: url(/imgs/apple-img.png);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .cards-bg-img-2 {
-    background-image: url(/imgs/banana-img.png);
-    background-position: center;
+  background-image: url(/imgs/banana-img.png);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .cards-bg-img-3 {
-    background-image: url(/imgs/cherry-img.png);
-    background-position: center;
+  background-image: url(/imgs/cherry-img.png);
+  background-position: center;
+  background-repeat: no-repeat;
 }
